# matrix-multiplication

./: .gitignore  CMakeLists.txt  Makefile  README.md  matrix.c  uncrustify.conf
src/: config.h  matrix.c
src/utils/: files.c  files.h  list.c  list.h  strings.c  strings.h
utils/: list.h
